FIkset opp Registreringen optimal for Kunde som designmessig også kan brukes for Admin i orden

--- a/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
@@ -15,7 +15,7 @@
             <!--Page-Logo Kaffeplaneten-->
             <img src="~/Content/img/Logo.png" class="img-responsive" />
             <div class="container-fluid">
-            <div class="navbar-header" style="background-color: #5d3d1f">
+            <div class="navbar-header" style="background-color: #5d3d1f; border-color: #337ab7;">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" style="background-color: #5d3d1f">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
