--- a/Kaffeplaneten/Administrasjon/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Administrasjons for Kaffeplaneten AS</p>
         </footer>
     </div>
 
