--- a/Kaffeplaneten/Administrasjon/Views/Super/Index.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Super/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Administrasjon kaffeplaneten!";
 }
-@*@Html.Action("HeaderAndMenuBar", "Layout")*@
+@Html.Action("HeaderAndMenuBar", "Layout")
 
 
 
