--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
     <body>
         
-            @RenderBody()
+       @RenderBody()
         <script type="text/javascript">
                         window.onload = createCart();
         </script>
@@ -27,10 +27,10 @@
         <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
         <script src="~/Scripts/JavascriptFunksjoner.js"></script>
 
-    
+        <footer>
+            <p>&copy; @DateTime.Now.Year -Kaffeplaneten AS</p>
+        </footer>    
     </body>
-
-
 
 
 </html>
