--- a/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
@@ -108,7 +108,7 @@
                                             </span>
                                             <input type="text" class="form-control" style="font-size: 14px;" readonly="readonly" placeholder="Samme betaling og leveringsadresse?"/>
                                             <span class="input-group-addon">
-                                                <input type="checkbox" onclick="sameAdress(this)" />
+                                                <input type="checkbox" id="checkbox"onclick="sameAdress(this)" />
                                             </span>
                                         </div>
                                     </div>
