--- a/Kaffeplaneten/Administrasjon/Views/_ViewStart.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
+
+<p>Admin - Startside</p>
+
+@Html.ActionLink("Produkter", "AllProducts", "AdminProduct")
+
