--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h2>AllProducts</h2>
-
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table-responsive">
+<table class="table table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.productID)
@@ -37,39 +37,38 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.productID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.quantity)
-        </td>
-        <td>
-            <img src="../../Content/img/@Html.DisplayFor(modelItem => item.imageURL)" alt="Sample Image"  style="width:50px;height:50px">
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.productName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.stock)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.category)
-        </td>
-        <td>
-            Description..
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", "AdminProduct", new {  id=item.productID }, null) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", "AdminProduct", new {  id=item.productID })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.productID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.quantity)
+            </td>
+            <td>
+                <img src="~/Content/img/Logo-Admin.png"  alt="@Html.DisplayFor(modelItem => item.imageURL) FIKSE BILDER GLOBALT" style="width:50px;height:50px">
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.productName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.stock)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.category)
+            </td>
+            <td>
+                Description..
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", "AdminProduct", new { id = item.productID }, null) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", "AdminProduct", new { id = item.productID })
+            </td>
+        </tr>
+    }
 </table>
