--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -14,6 +14,19 @@
     <div class="form-horizontal">
         <h4>ProductModel</h4>
         <hr />
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.productID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.productID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.productID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+
+
+
         <div class="form-group">
             @Html.LabelFor(model => model.productName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
