--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "AllProducts";
 }
 
-<h2>AllProducts</h2>
+<h2>Produkter i databasen</h2>
 <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nytt produkt", "Add" ,null, new { @class="btn btn-success " })
 </p>
 <table class="table table-hover">
     <tr>
