--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Add";
 }
 
-<h2>Add</h2>
 <div class="container">
+<h2>Legg til nytt produkt</h2>
 
     @using (Html.BeginForm())
     {
@@ -29,13 +29,6 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.productID, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    Auto
                 </div>
             </div>
 
@@ -69,7 +62,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -86,6 +79,17 @@
         @Html.ActionLink("Tilbake", "AllProducts")
     </div>
 </div>
+
+<script type="text/javascript">
+    $(':file').change(function () {
+        var file = this.files[0];
+        var name = file.name;
+        var size = file.size;
+        var type = file.type;
+        alert(42);
+    });
+</script>
+
 
 
 
