--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -5,8 +5,6 @@
 }
 
 
-
-
 <div class="container">
         <h2>Endre produkt</h2>
 
@@ -22,9 +20,9 @@
                 @Html.LabelFor(model => model.productID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
 
-                 @Html.EditorFor(model => model.productID, new { htmlAttributes = new { @class = "form-control" } })
-
-                </div>
+                 @Html.EditorFor(model => model.productID, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    
+                </div>  
             </div>
 
             <div class="form-group">
@@ -39,13 +37,6 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
@@ -73,7 +64,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.description, new { htmlAttributes = new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                 </div>
             </div>
