--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
@@ -27,8 +27,10 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.category, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
+
                     @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
+
+                    @Html.DropDownListFor(model => model.category, new SelectList(ViewBag.uniqeCategories, "Velg kategori.." ))
                 </div>
             </div>
 
