Riktig link til produktredigering

--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -57,7 +57,7 @@
                                 }
                                 if (productAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-folder-close"></span>@Html.ActionLink("Produktredigering", "AllProducts", "AdminProductController", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-folder-close"></span>@Html.ActionLink("Produktredigering", "AllProducts", "AdminProduct", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (databaseAdmin)
                                 {
