AdminMeny på produktside

--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "AllProducts";
 }
-
+@Html.Action("HeaderAndMenuBar", "Layout")
 
 <div class="container">
     <h2>Produkter i databasen</h2>
