adminmeny på alle produktviews

--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Add";
 }
+@Html.Action("HeaderAndMenuBar", "Layout")
 
 <div class="container">
 <h2>Legg til nytt produkt</h2>
