--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+@Html.Action("HeaderAndMenuBar", "Layout")
 
 <div class="container">
         <h2>Endre produkt</h2>
